# rurushi

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
scripts/: build.ps1  build.sh  dev.ps1
src/: api.rs  handlers.rs  main.rs  models.rs  streaming.rs  video.rs
