[package]
name = "Rurushi"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
hlskit = "0.3.0"
mime = "0.3.17"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"]}
tower-http = { version = "0.6.2", features = ["fs"] }
anyhow = "1.0.93"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
walkdir = "2.5.0"
regex = "1.10.6"