[package]
name = "Rurushi"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
hlskit = "0.3.0"
mime = "0.3.17"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"]}
tower-http = { version = "0.6.6", features = ["fs"] }
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
walkdir = "2.5.0"
regex = "1.12.1"