[package]
name = "Rurushi"
version = "0.1.0"
edition = "2024"

[dependencies]
hlskit = "0.3.0"
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.145"
walkdir = "2.5.0"
regex = "1.12.2"
axum = "0.8.6"
tower-http = { version = "0.6.6", features = ["fs", "trace", "cors"] }